clusters/production/automation/govee2mqtt/govee2mqtt-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: govee2mqtt
  namespace: automation
spec:
  selector:
    matchLabels:
      app: govee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: govee2mqtt
    spec:
      hostNetwork: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - env:
        - name: TZ
          value: America\Toronto
        - name: GOVEE_TEMPERATURE_SCALE
          value: "C"
        imagePullPolicy: IfNotPresent
        name: govee2mqtt
        image: ghcr.io/wez/govee2mqtt:2026.03.25-ab9deb66 # {"$imagepolicy": "flux-system:govee2mqtt"}
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
      hostname: govee2mqtt
---
apiVersion: v1
kind: Service
metadata:
  name: govee2mqtt
  namespace: automation
spec:
  ports:
  - name: govee2mqtt-8056
    port: 8056
    protocol: TCP
    targetPort: 8056
  selector:
    app: govee2mqtt
  type: ClusterIP
