clusters/production/automation/govee2mqtt/govee2mqtt-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: govee2mqtt
  namespace: automation
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - govee2mqtt.rees.ca
  rules:
  - backendRefs:
    - name: govee2mqtt
      port: 8056
